[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/map/ShopItem.gd" type="Script" id=1]
[ext_resource path="res://resources/icons/Cooldown.tres" type="Resource" id=2]
[ext_resource path="res://sprites/symbols/Clock.png" type="Texture" id=3]
[ext_resource path="res://src/cards/Icon.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/icons/Clock.tres" type="Resource" id=5]
[ext_resource path="res://sprites/symbols/Cooldown.png" type="Texture" id=6]
[ext_resource path="res://audio/sfx/battle/card_chosen.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/sfx/ui/refill.wav" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Shader" id=19]
code = "shader_type canvas_item;

uniform bool inverted = false;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = mix(COLOR.rgb, abs(COLOR.rgb - vec3(1.0)), float(int(inverted)));
}"

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = SubResource( 19 )
shader_param/inverted = false

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

uniform bool inverted = false;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = mix(COLOR.rgb, abs(COLOR.rgb - vec3(1.0)), float(int(inverted)));
}"

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = SubResource( 15 )
shader_param/inverted = false

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=21]
resource_name = "flash"
length = 0.5
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_everything_white"
}, {
"args": [  ],
"method": "set_everything_black"
}, {
"args": [  ],
"method": "set_everything_white"
}, {
"args": [  ],
"method": "set_everything_black"
}, {
"args": [  ],
"method": "set_everything_white"
}, {
"args": [  ],
"method": "set_everything_black"
}, {
"args": [  ],
"method": "set_everything_white"
}, {
"args": [  ],
"method": "set_everything_black"
}, {
"args": [  ],
"method": "set_everything_white"
}, {
"args": [  ],
"method": "set_everything_black"
}, {
"args": [  ],
"method": "set_everything_white"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}

[node name="ShopItem" type="Button"]
margin_right = 122.0
margin_bottom = 9.0
rect_min_size = Vector2( 122, 9 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 17 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 2 )
enabled_focus_mode = 0
script = ExtResource( 1 )

[node name="Symbols" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
custom_constants/separation = 1
alignment = 1

[node name="Icon_01" parent="Symbols" instance=ExtResource( 4 )]
material = SubResource( 14 )
margin_left = 49.0
margin_right = 56.0
margin_bottom = 9.0

[node name="Icon_02" parent="Symbols" instance=ExtResource( 4 )]
material = SubResource( 14 )
margin_left = 57.0
margin_right = 64.0
margin_bottom = 9.0

[node name="Icon_03" parent="Symbols" instance=ExtResource( 4 )]
material = SubResource( 14 )
margin_left = 65.0
margin_right = 72.0
margin_bottom = 9.0

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
mouse_filter = 2
custom_constants/separation = 1

[node name="Name" type="Label" parent="HBox"]
margin_top = 1.0
margin_right = 121.0
margin_bottom = 8.0
rect_min_size = Vector2( 36, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "battleaxe"
uppercase = true

[node name="CountLabel" type="Label" parent="."]
visible = false
margin_right = 7.0
margin_bottom = 9.0
rect_min_size = Vector2( 7, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
align = 1
valign = 1

[node name="Cooldown" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -4.5
margin_right = -1.0
margin_bottom = 4.5
custom_constants/separation = 0
alignment = 2

[node name="Name" type="Label" parent="Cooldown"]
margin_left = 24.0
margin_top = 1.0
margin_right = 28.0
margin_bottom = 8.0
size_flags_horizontal = 8
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
uppercase = true

[node name="Cooldown" parent="Cooldown" instance=ExtResource( 4 )]
visible = false
material = SubResource( 20 )
margin_left = 21.0
margin_right = 28.0
margin_bottom = 9.0
texture = ExtResource( 6 )
icon = ExtResource( 2 )

[node name="Clock" parent="Cooldown" instance=ExtResource( 4 )]
material = SubResource( 20 )
margin_left = 28.0
margin_right = 35.0
margin_bottom = 9.0
texture = ExtResource( 3 )
icon = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 22 )
anims/flash = SubResource( 21 )

[node name="Selected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="Refill" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[connection signal="mouse_entered" from="." to="." method="_on_ShopItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ShopItem_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_ShopItem_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
